mudança cores layout

--- a/css/cabecalho.css
+++ b/css/cabecalho.css
@@ -1,5 +1,5 @@
 .cabecalho {
-	background-color: #0E4E53;
+	background-color: #6DB8C3;
 	font-size: 1rem;
 	padding-top: .5em;
 	padding-bottom: .5em;
@@ -9,13 +9,14 @@
 	justify-content: space-between;
 	align-items: center;
 	align-content: center;
+	border-bottom: 2px solid #065A62;
 }
 
 .cabecalho-logo {
 	font-size: 2em;
 	margin-bottom: .3em;
 	font-family: "Verdana", "Helvetica", sans-serif;
-	color: #83C8A2;
+	color: #065A62;
 	display: inline-block;
 	vertical-align: middle;
 	margin-right: 1em;
