--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: 'Open Sans', sans-serif;
-  background: #E0E0D7;
+  background: #F1F1EB;
 }
 
 .container {
@@ -14,23 +14,27 @@ body {
 }
 
 #dataTimeStl{
-  border: 1px solid #0E4E53;
+  border: 1px solid #065A62;
+  background-color: #fff;
   padding: 20px;
   max-width: 60px;
   margin: 0 10px 10px 0;
   border-radius: 5px;
+  color:#065A62;
   font-weight: bold;
   display:inline-block;
 }
 #btnGetTime{
   margin-bottom:35px;
 }
+/*botao add hora */
 .btnGetTimeStl{
-  background-color: #0E4E53;
-  border-color: #06F8AE;
+  background-color: #065A62;
+  border: 1px solid #065A62;
   padding:5px;
   margin: 10px 0 5px 0;
   color:#fff;
+  font-weight: bold;
   width: 100px;
   height: 40px;
   border-radius: 5px;
@@ -39,6 +43,7 @@ body {
 #fulDateStl{
   font-size: 18px;
   font-weight: bold;
+  color:#065A62;
 }
 .pontoEletro{
   margin-top:20px;
